[package]
name = "puteketeke"
version = "0.0.3"
authors = ["Keith T. Star <uberfoo@me.com>"]
categories = ["asynchronous", "concurrency"]
description = "An asynchronous runtime built on smol."
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
keywords = ["executor", "async", "non-blocking", "futures"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/uberfoo/puteketeke"
edition = "2021"

[dependencies]
async-executor = "1.6.0"
async-io = "2.2.0"
crossbeam = "0.8.2"
futures-lite = "2.0.1"
once_cell = "1.18.0"
parking_lot = "0.12.1"
slab = "0.4.9"
threadpool = "1.8.1"
tracing = "0.1.40"

[dev-dependencies]
async-compat = "0.2.3"
color-backtrace = "0.6.1"
futures = "0.3.29"
rand = "0.8.5"
reqwest = "0.11.22"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
warp = "0.3.6"
